--- a/app/html/downloads.html
+++ b/app/html/downloads.html
@@ -2,13 +2,10 @@
     <link rel="stylesheet" href="../css/downloads.css" />
     <link rel="stylesheet" href="../css/card-grid.css" />
 
-    <script src="../js/downloads.js"></script>
-
-    <script src="../js/components/downloader/downloads/fetching-item.js"></script>
-    <script src="../js/components/downloader/downloads/downloading-item.js"></script>
-    <script src="../js/components/downloader/downloads/extracting-item.js"></script>
-
-    <script src="../js/components/card-grid/card-grid.js"></script>
+    <script defer>
+        page.downloads.Initialize();
+        $(document).ready(() => mdc.autoInit());
+    </script>
 </head>
 
 <div class="downloads">
@@ -30,12 +27,12 @@
             <div class="bottom-row">
                 <div class="game-screenshots" id="game-screenshots"></div>
                 <div class="details">
-                    <div class="" id="age-rating"></div>
-                    <div class="" id="release-date"></div>
-                    <div class="" id="publisher"></div>
-                    <div class="" id="developer"></div>
-                    <div class="" id="platforms"></div>
-                    <div class="" id="genre"></div>
+                    <div id="age-rating"></div>
+                    <div id="release-date"></div>
+                    <div id="publisher"></div>
+                    <div id="developer"></div>
+                    <div id="platforms"></div>
+                    <div id="genre"></div>
                 </div>
             </div>
         </div>
@@ -43,13 +40,7 @@
 </div>
 
 <!--Add download-->
-<button class="mdc-fab" aria-label="Favorite" onclick="addDownload()" data-mdc-auto-init="MDCRipple">
+<button class="mdc-fab" aria-label="Favorite" onclick="downloader.item.addItem()" data-mdc-auto-init="MDCRipple">
     <div class="mdc-fab__ripple"></div>
     <span class="mdc-fab__icon material-icons">add</span>
 </button>
-
-<script type="text/javascript" defer>
-    $(document).ready(function () {
-        mdc.autoInit();
-    });
-</script>
